--- a/index.html
+++ b/index.html
@@ -1758,7 +1758,7 @@ Item added to your cart
 
     <script src="//0422f4-26.myshopify.com/cdn/shop/t/2/assets/pickup-availability.js?v=66138958121968076331710055557" defer="defer"></script></div>
 <div class="product__description rte quick-add-hidden" >
-                    Judi Mpo Merupakan salah satu situs dengan link login game mpo play terlengkap tanpa potongan yang bisa di mainkan dgn minimal deposit paling murah yang dapat di nikmati hanya di situs judimpo.
+                    <a href="https://judimpologin.com">Judi Mpo</a> Merupakan salah satu situs dengan link login game mpo play terlengkap tanpa potongan yang bisa di mainkan dgn minimal deposit paling murah yang dapat di nikmati hanya di situs judimpo.
                   </div>
                 
 <script src="//0422f4-26.myshopify.com/cdn/shop/t/2/assets/share.js?v=13024540447964430191710055558" defer="defer"></script>
